# ignition

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
ignition-catalogs/: Cargo.toml
ignition-catalogs/src/: catalog.rs  lib.rs
weave/: Cargo.toml
weave/benches/criterion/: combinations.rs  lib.rs  matrix.rs  serialize.rs  tree_building.rs  zdd.rs  zdd2_building.rs  zdd_building.rs
weave/benches/criterion/forest/: mod.rs  trees.rs
weave/src/: core.rs  lib.rs  types.rs
weave/src/bdd/: mod.rs
weave/src/bdd/node/: apply.rs  arena.rs  bit_operations.rs  serialize.rs  summarize.rs
weave/src/matrix/: mod.rs
weave/src/matrix/forest/: intersect.rs  mod.rs  product.rs  subset.rs  union.rs
weave/src/matrix/tree/: intersect.rs  mod.rs  product.rs  union.rs
weave/src/zdd/: mod.rs
weave/src/zdd/node/: arena.rs  mod.rs  parser.rs  serialize.rs
weave/src/zdd/tree/: combinations.rs  intersect.rs  mod.rs  product.rs  restrict.rs  summarize.rs  traversable.rs  union.rs  universe.rs
weave/src/zdd2/: mod.rs
weave/src/zdd2/forest/: intersect.rs  mod.rs  product.rs  subset.rs  trees.rs  union.rs
weave/src/zdd2/forest/node/: arena.rs  intersect.rs  macros.rs  mod.rs  parser.rs  product.rs  serialize.rs  subset.rs  union.rs
weave/src/zdd2/forest/root/: intersect.rs  mod.rs  subset.rs  (+4 more)
weave/src/zdd2/tree/: intersect.rs  mod.rs  product.rs  union.rs
weave/tests/: matrix.rs  node_bdd_serde.rs  node_zdd_serde.rs  zdd.rs
weave/tests/forest/: intersect.rs  mod.rs  occurrences.rs  product.rs  subset.rs  subset_all.rs  subset_none.rs  subset_not.rs  union.rs
(+112 files in other folders)
