[package]
name = "weave"
description = "Multi-purpose decision diagrams"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]

[dependencies]
itertools = "0.7.8"
lazy_static = "1.1.0"

serde = "1.0"
serde_derive = "1.0"
maplit = "1.0"

[dev-dependencies]
criterion = "0.2.4"
serde_test = "1.0"
