[package]
name = "weave"
description = "Multi-purpose decision diagrams"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]

[dependencies]
itertools = "0.8"
lazy_static = "1"

serde = "1.0"
serde_derive = "1.0"

maplit = "1.0"
nom = "^4"

[dependencies.hashbrown]
version = "0.1"
features = ["serde"]

[dev-dependencies]
criterion = "0.2"
serde_test = "1.0"
serde_json = "1.0"
bincode = "1.0"

[[bench]]
name = "weave_bench"
harness = false
path = "benches/criterion/lib.rs"
